fix UI visibility issues

--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,8 @@ body {
 
 header {
   display: block;
-  background-color: #cff4ec;
-  color: #fff;
+  background-color: #83f8df;
+  color: #000000;
   padding: 10px;
   position: fixed;
   width: 100%;
@@ -48,7 +48,7 @@ nav ul li {
 }
 
 nav ul li a {
-  color: #fff;
+  color: #000000;
   text-decoration: none;
   padding: 10px;
 }
@@ -152,13 +152,17 @@ h1 {
 
 a:hover {
   color: yellow;
+
+}
+a:active {
+  color: blue;
 }
 
 /* Footer Styles */
 
 footer {
-  background-color: #cff4ec;
-  color: #fff;
+  background-color: #83f8df;
+  color: #000000;
   padding: 3px;
   text-align: center;
 /*   position: fixed;
